cambio de formato

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
           </div>
         </div>
-        <div class="row small-up-2 medium-up-3 large-up-4">
+        <div class="row small-up-2 medium-up-3 large-up-4 text-align">
           <div class="column">
             <img class="thumbnail" src="./assets/img/projects/01.png">
             <h5><a href="https://www.homebabycare.cl/" target="_blank" style="color:#588157;">Home Baby Care</a></h5>
@@ -54,29 +54,30 @@
 
         <hr>
 
-        <div class="row">
-          <div class="medium-6 columns">
-            <h3 style="color: #344e41;">¡Contáctame!</h3>
-            <p>Si tienes alguna pregunta o simplemente quieres conversar sobre tecnología lugares por recorrer o libros, ¡escríbeme!</p>
-            <ul class="menu">
-              <li><a class="anchor" href="https://www.linkedin.com/in/gmunozcastro/" target="_blank">Linkedin</a></li>
-              <li><a class="anchor" href="https://github.com/mrGoonies" target="_blank">Github</a></li>
-              <li><a class="anchor" href="https://medium.com/@munozgoonies" target="_blank">Medium</a></li>
-            </ul>
+        <div class="m-4">
+          <div>
+            <h3 style="color: #a07b4f;">¡Contáctame!</h3>
+            <p>Si tienes alguna pregunta o simplemente quieres conversar sobre tecnología, lugares por recorrer o libros, ¡escríbeme!</p>
           </div>
-          <div class="medium-6 columns">
-            <label>Nombre
-              <input type="text" placeholder="Nombre">
-            </label>
+          <ul class="menu">
+            <li><a class="anchor" href="https://www.linkedin.com/in/gmunozcastro/" target="_blank" >Linkedin</a></li>
+            <li><a class="anchor" href="https://github.com/mrGoonies" target="_blank">Github</a></li>
+            <li><a class="anchor" href="https://medium.com/@munozgoonies" target="_blank">Medium</a></li>
+          </ul>
+
+          <label>Nombre
+            <input type="text" placeholder="Nombre">
+          </label>
             <label>Correo
               <input type="text" placeholder="Email">
             </label>
             <label>
-              Mesaje
+              Mensaje
               <textarea placeholder=""></textarea>
             </label>
             <input type="submit" class="button expanded" value="Enviar">
           </div>
+        </div>
         </div>
       </div>
     </div>
